tests/should_fail/deep_concat.nds
-- Right-nested concat through grouping; hits parser depth.
set y to ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & ("a" & "x"))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))
